# siko

./: .gitignore  .gitmodules  AddConverter.py  Borrowchecker.py  CFG.py  CFGBuilder.py  Cargo.toml  ControlFlowGraph.sk  DataFlowDependency.py  DataFlowPath.py  DataFlowPath.sk  DependencyProcessor.py  Dockerfile.linux  Equality.py  ForbiddenBorrows.py  IR.py  Instruction.py  Lexer.py  Lexer.sk  Makefile  MemberInfo.py  NameResolver.py  OwnershipMonomorphization.py  Ownershipinference.py  Parser.py  Path.py  README.md  SCC.py  Syntax.py  TODO  Token.py  Transpiler.py  TypeVariableInfo.py  Typechecker.py  Util.py  algo_tarjan.sh  alma.txt  bootstrap.py  bootstrap.sh  compile_sikoc.py  (+42 more)
crates/siko_interpreter/: Cargo.toml
crates/siko_interpreter/src/: char.rs  environment.rs  extern_function.rs  float.rs  hack.rs  int.rs  interpreter.rs  iterator.rs  lib.rs  list.rs  map.rs  std_ops.rs  std_util.rs  std_util_basic.rs  string.rs  util.rs  value.rs
rust/: Cargo.toml  bootstrap.sh  bootstrap2.sh  build.sh  compile_sikoc.sh  siko  stage0.sh  stage1.sh  stage2.sh
rust/crates/siko/: Cargo.toml
rust/crates/siko_backend/: Cargo.toml
rust/crates/siko_backend/src/: backend.rs  expr_processor.rs  format_rewriter.rs  function_processor.rs  function_queue.rs  lib.rs  util.rs
rust/crates/siko_compiler/: Cargo.toml
rust/crates/siko_compiler/src/: config.rs  error.rs  lib.rs
rust/crates/siko_constants/: Cargo.toml
rust/crates/siko_constants/src/: lib.rs
rust/crates/siko_interpreter/src/: char.rs  environment.rs  hack.rs  list.rs  map.rs  std_util_basic.rs  string.rs  util.rs  value.rs
rust/crates/siko_ir/: Cargo.toml
rust/crates/siko_ir/src/: builder.rs  class.rs  data.rs  data_type_info.rs  function_dep_processor.rs  instance_resolver.rs  lib.rs  program.rs  substitution.rs  type_var_generator.rs  types.rs  walker.rs
rust/crates/siko_location_info/: Cargo.toml
rust/crates/siko_location_info/src/: file_manager.rs  filepath.rs  item.rs  lib.rs  location.rs  location_id.rs  location_info.rs  location_set.rs  span.rs
rust/crates/siko_mir/: Cargo.toml
rust/crates/siko_mir/src/: lib.rs  pattern.rs  (+1 more)
rust/crates/siko_name_resolver/: Cargo.toml
rust/crates/siko_parser/: Cargo.toml
rust/crates/siko_syntax/: Cargo.toml
rust/crates/siko_transpiler/: Cargo.toml
rust/crates/siko_type_checker/: Cargo.toml
rust/crates/siko_util/: Cargo.toml
rust/siko_tester/: Cargo.toml
(+4550 files in other folders)
