[workspace]

members = ["crates/siko_util",
           "crates/siko_constants",
           "crates/siko_syntax",
           "crates/siko_parser",
           "crates/siko_ir",
           "crates/siko_mir",
           "crates/siko_backend",
           "crates/siko_transpiler",
           "crates/siko_name_resolver",
           "crates/siko_type_checker",
           "crates/siko_compiler", 
           "crates/siko_interpreter",
           "crates/siko_location_info",
           "crates/siko"]