[package]
name = "siko_interpreter"
version = "0.1.0"
authors = ["no <nope>"]
edition = "2018"

[dependencies]
siko_ir = { path = "../siko_ir" }
siko_constants = { path = "../siko_constants" }
siko_location_info = { path = "../siko_location_info" }
siko_util = { path = "../siko_util" }
im-rc = "15.0.0"