[package]
name = "siko_backend"
version = "0.1.0"
authors = ["no <nope>"]
edition = "2018"

[dependencies]
siko_location_info = { path = "../siko_location_info" }
siko_util = { path = "../siko_util" }
siko_ir = { path = "../siko_ir" }
siko_mir = { path = "../siko_mir" }
siko_constants = { path = "../siko_constants" }
