[package]
name = "siko_name_resolver"
version = "0.1.0"
authors = ["no <nope>"]
edition = "2018"

[dependencies]
siko_location_info = { path = "../siko_location_info" }
siko_util = { path = "../siko_util" }
siko_ir = { path = "../siko_ir" }
siko_syntax = { path = "../siko_syntax" }
siko_constants = { path = "../siko_constants" }
